added more chat routes + fixed documentation params
